--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
       run: npm install
 
     - name: Build Docker image
-      run: docker build -t my-docker-image .
+      run: docker build -t my-web-image .
 
   deploy:
     runs-on: ubuntu-latest
