--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       run: npm install
 
     - name: Build Docker image
-      run: docker build -t my-docker-image .
+      run: docker build -t my-web-image .
 
   deploy:
     runs-on: ubuntu-latest
@@ -34,4 +34,4 @@ jobs:
       run: |
         # Your deployment commands go here
         # Example: docker push to a container registry
-        docker push your-container-registry.azurecr.io/my-docker-image:latest
+        docker push your-container-registry.azurecr.io/my-web-image:latest
